src/themes/pelican-alchemy-take-two/alchemy/static/css/theme.css
/* ... */
.highlight {
    margin: 0 1em;
}


/* --------------------- Footer and pagination sections -------------------- */

.related_articles {
  font-size: 1rem;
  margin-left: auto;
  margin-right: auto;
  padding: 1rem;
  margin-top: 3rem;
  margin-bottom: 3rem;
  border: solid 1px #d9d9d9;
  border-radius: 5px;
  background: #f5f5f5;
  width: 90%;
  max-width: 550px;
}


.related_articles_header {
    margin-bottom: 1.1rem;
}


.related_articles td {
  padding-top: 10px;
  padding-left: 5px;
}

.related_articles img {
    height: 40px;
    width: auto;
}

.pagination .page-link {
  color: #333;
}

.footer {
  padding: 1.5rem 0 .5rem;
  border-top: 1px solid rgba(0,0,0,.1);
}

footer .row {
  margin-left: 3px;
  margin-right: 3px;
}

.page-footer {
  font-size: 12px;
  margin-left: 3px;
  margin-right: 3px;
}

.loaded {
  color: #AAA;
  font-size: 10px;
}

/* ------------------------------ Big Screens ------------------------------ */

@media (min-width: 760px) {
  .header .title {
    font-size: 1.8rem;
    margin-top: 0.5rem;
  }

  .header .siteimagediv {
    margin-left: .5rem;
  }

  h2 {
    font-size: 2rem;
    
  }


  h3 {
    font-size: 1.5rem;
    /* margin-top: 3.2rem; */
  }
}

/* ----------------------------- Small screens ----------------------------- */

@media (max-width: 759px) {
  #sitesubtitle {
    font-size: 9px;
  }

  .siteimagediv {
    max-width: 100%;
    margin-left: auto;
    margin-right: auto;
  }

  .titlediv{
    max-width: 100%;
    min-width: 320px;
    padding-left: 0;
    padding-right: 0;
  }

  .header .text-muted {
    font-size: .8rem;
  }

  .header {
     position: absolute;
     margin-left: 0;
     text-align: center;
     display: block;
  }

  .link_box{
    text-align: center;
    flex-shrink: 0;
    flex-grow: 0;
    flex-basis: 100%;
    width: 100%;
    max-width: 100%;
  }

  .main {
     padding: 14.9rem 0 3rem 0;
     display: block; 

  }

  .sidebar {
    width: 100%;
    height: auto;
    position: relative;
    text-align: center;
    float: none;
    margin-top: 50px;
    margin-left: auto;
    margin-right: auto;
  }
  
  
  .col-sm-3 {
    -webkit-box-flex: 0;
    -ms-flex: 0 0 40%;
    flex: 0 0 40%;
    max-width: 40%;
  }

header .col-sm-7 {
    flex: none;
}

  .article_list_text {
    -webkit-box-flex: 0;
    -ms-flex: 0 0 60%;
    flex: 0 0 60%;
    max-width: 60%;
  }

  .sidebar a {
    float: left; 
    text-align: left;
    margin-bottom: 3px;
	margin-top: 3px;
  } 
  
  div.content {  
  	margin-left: 0;
  	margin-right: 0;  
  } 

  .header .title {
    font-size: 1.7rem;
    margin-top: 0.2rem;
  }

  .header ul {
    margin-bottom: .2rem;
    margin-right: 1.5rem;
    font-size: 1.25rem;
  }

  .footer {
     text-align: center;
     margin-left: 0;
     flex: none;
     max-width: 100%;
  }

  .teaser header li {
    display: inline-block;
  }

  .teaser header li:not(:last-child) {
    margin-right: 10px;
  }

  h1 {
    font-size: 1.7rem;
  }

  h2 {
    font-size: 1.6rem;
  }

  h3 {
    font-size: 1.3rem;
  }

  .h3 {
    font-size: .7rem;
  }

  .article #cover {
    max-width: 100%;
    /* max-height: 280px;*/
    display: block;
    margin-left: auto;
    margin-right: auto;
    object-fit: contain;
  }

  .article .article_list_img {
    width: 100%;
    max-width: 200px;
    max-height: 200px;
    margin-bottom: 10px;
  }

  .row {
    margin-left: 0;
    margin-right: 0;
  }
  
  
}



@media (max-width: 540px) {

  
.col-sm-3 {
  -webkit-box-flex: 0;
  -ms-flex: 0 0 100%;
  flex: 0 0 100%;
  max-width: 100%;
}

.article_list_text {
  -webkit-box-flex: 0;
  -ms-flex: 0 0 100%;
  flex: 0 0 100%;
  max-width: 100%;
}

 .pagination { display: ruby; }

/* Pygments theme (autumn)*/
.highlight pre .hll{background-color:#ffc}.highlight pre{background:#fff}.highlight pre .c{color:#aaa;font-style:italic}.highlight pre .err{color:#f00;background-color:#faa}.highlight pre .k{color:#00a}.highlight pre .ch{color:#aaa;font-style:italic}.highlight pre .cm{color:#aaa;font-style:italic}.highlight pre .cp{color:#4c8317}.highlight pre .cpf{color:#aaa;font-style:italic}.highlight pre .c1{color:#aaa;font-style:italic}.highlight pre .cs{color:#00a;font-style:italic}.highlight pre .gd{color:#a00}.highlight pre .ge{font-style:italic}.highlight pre .gr{color:#a00}.highlight pre .gh{color:#000080;font-weight:bold}.highlight pre .gi{color:#0a0}.highlight pre .go{color:#888}.highlight pre .gp{color:#555}.highlight pre .gs{font-weight:bold}.highlight pre .gu{color:#800080;font-weight:bold}.highlight pre .gt{color:#a00}.highlight pre .kc{color:#00a}.highlight pre .kd{color:#00a}.highlight pre .kn{color:#00a}.highlight pre .kp{color:#00a}.highlight pre .kr{color:#00a}.highlight pre .kt{color:#0aa}.highlight pre .m{color:#099}.highlight pre .s{color:#a50}.highlight pre .na{color:#1e90ff}.highlight pre .nb{color:#0aa}.highlight pre .nc{color:#0a0;text-decoration:underline}.highlight pre .no{color:#a00}.highlight pre .nd{color:#888}.highlight pre .ni{color:#800;font-weight:bold}.highlight pre .nf{color:#0a0}.highlight pre .nn{color:#0aa;text-decoration:underline}.highlight pre .nt{color:#1e90ff;font-weight:bold}.highlight pre .nv{color:#a00}.highlight pre .ow{color:#00a}.highlight pre .w{color:#bbb}.highlight pre .mb{color:#099}.highlight pre .mf{color:#099}.highlight pre .mh{color:#099}.highlight pre .mi{color:#099}.highlight pre .mo{color:#099}.highlight pre .sb{color:#a50}.highlight pre .sc{color:#a50}.highlight pre .sd{color:#a50}.highlight pre .s2{color:#a50}.highlight pre .se{color:#a50}.highlight pre .sh{color:#a50}.highlight pre .si{color:#a50}.highlight pre .sx{color:#a50}.highlight pre .sr{color:#099}.highlight pre .s1{color:#a50}.highlight pre .ss{color:#00a}.highlight pre .bp{color:#0aa}.highlight pre .vc{color:#a00}.highlight pre .vg{color:#a00}.highlight pre .vi{color:#a00}.highlight pre .il{color:#099}

